remove Request and fix style
